[gd_scene load_steps=10 format=3 uid="uid://dfjh4s01g77bl"]

[ext_resource type="Script" path="res://scripts/settings_gui.gd" id="2"]
[ext_resource type="FontFile" path="res://resources/fonts/title.tres" id="3"]
[ext_resource type="FontFile" path="res://resources/fonts/text_strong.tres" id="4"]
[ext_resource type="FontFile" path="res://resources/fonts/text.tres" id="5"]
[ext_resource type="FontFile" path="res://resources/fonts/text_small.tres" id="6"]

[sub_resource type="StyleBoxFlat" id="1"]
bg_color = Color(0.0627451, 0.0627451, 0.0627451, 0.501961)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.0627451, 0.0627451, 0.0627451, 0.627451)
corner_detail = 1
shadow_color = Color(0, 0, 0, 0)
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="2"]
content_margin_left = 16.0
content_margin_top = 16.0
content_margin_right = 16.0
content_margin_bottom = 16.0
bg_color = Color(0.0627451, 0.0627451, 0.0627451, 0.313726)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.0627451, 0.0627451, 0.0627451, 0.54902)
corner_detail = 1
anti_aliasing = false

[sub_resource type="StyleBoxEmpty" id="3"]

[sub_resource type="StyleBoxEmpty" id="4"]

[node name="SettingsGUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 176.0
offset_top = 74.0
offset_right = -176.0
offset_bottom = -74.0
theme_override_styles/panel = SubResource("1")

[node name="MainContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 0
offset_left = 50.0
offset_top = 50.0
offset_right = 750.0
offset_bottom = 458.0

[node name="WelcomeTitle" type="Label" parent="Panel/MainContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3")
theme_override_font_sizes/font_size = 16
text = "Welcome"

[node name="WelcomeText" type="Label" parent="Panel/MainContainer"]
layout_mode = 2
text = "This Sponza demo showcases the capabilities of the Godot 4 renderer.
Please choose a preset suited to your hardware below:"

[node name="GraphicsQuality" type="HBoxContainer" parent="Panel/MainContainer"]
layout_mode = 2
theme_override_constants/separation = 24

[node name="Label" type="Label" parent="Panel/MainContainer/GraphicsQuality"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4")
text = "Graphics quality"

[node name="OptionButton" type="OptionButton" parent="Panel/MainContainer/GraphicsQuality"]
layout_mode = 2
item_count = 4
popup/item_0/text = "Low"
popup/item_0/id = 0
popup/item_1/text = "Medium"
popup/item_1/id = 1
popup/item_2/text = "High"
popup/item_2/id = 2
popup/item_3/text = "Ultra"
popup/item_3/id = 3

[node name="GraphicsBlurb" type="RichTextLabel" parent="Panel/MainContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(700, 50)
layout_mode = 2
theme_override_constants/line_separation = 2
theme_override_fonts/normal_font = ExtResource("5")
theme_override_fonts/bold_font = ExtResource("4")
theme_override_styles/focus = SubResource("2")
theme_override_styles/normal = SubResource("2")
bbcode_enabled = true

[node name="GraphicsInfo" type="RichTextLabel" parent="Panel/MainContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
theme_override_constants/line_separation = 2
theme_override_fonts/normal_font = ExtResource("5")
theme_override_fonts/bold_font = ExtResource("4")
theme_override_styles/focus = SubResource("2")
theme_override_styles/normal = SubResource("2")
bbcode_enabled = true

[node name="DisplayText" type="Label" parent="Panel/MainContainer"]
layout_mode = 2
text = "For more reproducible benchmarks, choose a display resolution:"

[node name="DisplayResolution" type="HBoxContainer" parent="Panel/MainContainer"]
layout_mode = 2
theme_override_constants/separation = 24

[node name="Label" type="Label" parent="Panel/MainContainer/DisplayResolution"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4")
text = "Display resolution"

[node name="OptionButton" type="OptionButton" parent="Panel/MainContainer/DisplayResolution"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MainContainer"]
layout_mode = 2
alignment = 1

[node name="ConfirmButton" type="Button" parent="Panel/MainContainer/HBoxContainer"]
layout_mode = 2
text = "OK"

[node name="QuitButton" type="Button" parent="Panel/MainContainer/HBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="MenuTip" type="RichTextLabel" parent="Panel"]
layout_mode = 0
theme_override_fonts/normal_font = ExtResource("6")
theme_override_styles/focus = SubResource("3")
theme_override_styles/normal = SubResource("4")
bbcode_enabled = true
text = "Press [Escape] to toggle this menu."

[connection signal="item_selected" from="Panel/MainContainer/GraphicsQuality/OptionButton" to="." method="_on_graphics_preset_change"]
[connection signal="item_selected" from="Panel/MainContainer/DisplayResolution/OptionButton" to="." method="_on_display_resolution_change"]
[connection signal="pressed" from="Panel/MainContainer/HBoxContainer/ConfirmButton" to="." method="_on_ConfirmButton_pressed"]
[connection signal="pressed" from="Panel/MainContainer/HBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
